# MetaWorm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  requirements.txt
Metaworm/: CMakeLists.txt  README.md
Metaworm/args/: run_worm_swim_args.txt  train_worm_swim_args.txt
Metaworm/cmake_module/: FindBoost.cmake  FindTinyXML.cmake
Metaworm/data/: worm_givenkey_turn.csv  worm_givenkey_turn2.csv  worm_mesh_4_test.mesh  worm_nerve_cord.muscle
Metaworm/data/muscle/: worm_muscles_300_220428-144704.json  worm_muscles_300_220428-152632.json
Metaworm/data/output/: Muscle_Signal1.csv
Metaworm/data/output/tmp/: worm_fast_t0_states_300.json
Metaworm/interact/: CMakeLists.txt  WormInEnv.py  interact.cpp  interact.h
Metaworm/interact/neural_model/: config_all.json
Metaworm/interact/neural_model/components/mechanism/modfile/: cainternm.mod  egl19.mod  egl2.mod  gapjunction.mod  kqt3.mod  nca.mod  neuron_to_neuron_inh_syn.mod  shl1.mod  slo1_egl19.mod  slo1_unc2.mod  slo2_egl19.mod  slo2_unc2.mod
Metaworm/interact/neural_model/components/mechanism/modfile_d/: cainternm.c  cainternn.c  cainternn.mod  cca1.c  cca1.mod  egl19.c  egl19.mod  egl2.c  egl2.mod  egl36.c  egl36.mod  gapjunction.c  gapjunction.mod  irk.c  irk.mod  kcnl.c  kqt3.c  kqt3.mod  kvs1.c  kvs1.mod  mod_func.c  nca.c  neuron_to_neuron_exc_syn.c  neuron_to_neuron_exc_syn.mod  neuron_to_neuron_inh_syn.c  neuron_to_neuron_inh_syn.mod  shk1.c  shk1.mod  shl1.c  slo1_egl19.c  slo1_egl19.mod  slo1_unc2.c  slo1_unc2.mod  slo2_egl19.c  slo2_egl19.mod  slo2_unc2.c  slo2_unc2.mod  unc2.c  unc2.mod
Metaworm/interact/neural_model/components/mechanism/modfile_old/: cainternm.mod  cca1.mod  exc_syn_advance.mod  irk.mod  kcnl.mod  kqt3.mod  kvs1.mod  neuron_to_neuron_exc_syn.mod  shk1.mod  slo1_egl19.mod  slo1_unc2.mod  slo2_egl19.mod  slo2_unc2.mod  unc2.mod
Metaworm/interact/neural_model/components/mechanism/test_channel_old/: kqt3curve.py  (+3 more)
Metaworm/interact/neural_model/components/model/: AIAL.hoc  AIAR.hoc  AIBL.hoc  AIBR.hoc  AIYL.hoc  AIYR.hoc  AIZL.hoc  AIZR.hoc  AVAL.hoc  AVAR.hoc  AVBL.hoc  AVBR.hoc  AVEL.hoc  AVER.hoc  AWAL.hoc  AWAR.hoc  AWCL.hoc  AWCR.hoc  DA01.hoc  DA02.hoc  DA03.hoc  DA04.hoc  DA05.hoc  DA06.hoc  DA07.hoc  DA08.hoc  DA09.hoc  DB01.hoc  DB02.hoc  DB03.hoc  DB04.hoc  DB05.hoc  DB06.hoc  DB07.hoc  DD01.hoc  DD02.hoc  DD03.hoc  DD04.hoc  DD05.hoc  DD06.hoc  (+67 more)
Metaworm/interact/neural_model/components/morphology/: AIAL.CNG.swc  AIAR.CNG.swc  AIBL.CNG.swc  AIBR.CNG.swc  AIYL.CNG.swc  AIYR.CNG.swc  AIZL.CNG.swc  AIZR.CNG.swc  AVAL.CNG.swc  AVAR.CNG.swc  AVBL.CNG.swc  AVBR.CNG.swc  AVEL.CNG.swc  AVER.CNG.swc  AWAL.CNG.swc  AWAR.CNG.swc  AWCL.CNG.swc  AWCR.CNG.swc  DA1.CNG.swc  DA2.CNG.swc  DA3.CNG.swc  DA4.CNG.swc  DA5.CNG.swc  DA6.CNG.swc  DA7.CNG.swc  DA8.CNG.swc  DA9.CNG.swc  DB1.CNG.swc  DB2.CNG.swc  DB3.CNG.swc  DB4.CNG.swc  DB5.CNG.swc  DB6.CNG.swc  DB7.CNG.swc  DD1.CNG.swc  DD2.CNG.swc  DD3.CNG.swc  DD4.CNG.swc  DD5.CNG.swc  DD6.CNG.swc  (+66 more)
Metaworm/interact/neural_model/components/param/: cell_0521.tar  cell_old.tar
Metaworm/interact/neural_model/network/: Cell.py  Connection.py  Network.py  Segment.py  export.py  init.py  input.py  run.py  run_test_syn.py  run_training_set.py  simulate.py
Metaworm/interact/neural_model/network/network_assemble/: data_structure.py  trans.py
Metaworm/interact/neural_model/utils/: _channel_param.txt  _volume.txt  args.py  distance.py  excelfunc.py  jsonfunc.py
Metaworm/interact/neural_model/wang_sim/: cnn.py  interact_with_env.py
Metaworm/interact/neural_model/wang_sim/data/: cnn_model.pt  eworm.muscle-220428-152601.txt  eworm.muscle.gt.txt  eworm.muscle.txt  eworm.muscle2.txt  eworm.muscle3.txt  eworm_soma.muscle.txt  group2_cnn_model.pt  group2_eworm.muscle-220428-152601.txt
Metaworm/render/: CMakeLists.txt  Camera.cpp  Camera.h  DrawFunctions.cpp  DrawFunctions.h  DrawPrimitives.cpp  DrawPrimitives.h  GLWindow.cpp  GLWindow.h  SimulationWindow.cpp  SimulationWindow.h  main.cpp
Metaworm/sim/: CMakeLists.txt  Environment.cpp  Environment.h  KeyWorm.cpp  KeyWorm.h  Muscle.cpp  Muscle.h  MuscleSegment.cpp  MuscleSegment.h  Normalizer.cpp  Normalizer.h  Worm.cpp  Worm.h
Metaworm/sim/fem/: World.cpp  World.h
Metaworm/sim/fem/Constraint/: ConstraintHeader.h  LinearMuscleConstraint.cpp
Metaworm/sim/fem/Mesh/: MeditMesh.cpp  MeditMesh.h  Mesh.cpp  Mesh.h  MeshHeaders.h
Metaworm/sim/util/: Annealer.cpp  ArgParser.cpp  ArgParser.h  DynamicTimeWarper.h  JsonUtil.h  Trajectory.h
neuronXcore/: CMakeLists.txt  CONTRIBUTORS  README.md  test_20cell.sh
neuronXcore/examples/: user guide.md  version.md
neuronXcore/examples/data/linux/lib/: libglfw.so.3.4
neuronXcore/examples/data/materials/: brain0.txt  brain1.txt  clothy.txt  neuron.txt  neuron1.txt  neuron2.txt  neuronmat.txt  synapse0.txt  synapse1.txt  yellow_cloth.txt
neuronXcore/examples/data/windows/: neuronXcore.exp
neuronXcore/examples/data/worm/: drawmuscles.txt  worm.sampling  worm_empty_key.csv
neuronXcore/examples/data/worm/mengdi/: cut_one_pace.csv  cut_one_pace.py
neuronXcore/examples/linux/: all_intelligent.sh  curves_intelligent.sh  triangles_intelligent.sh  tubes_intelligent.sh
neuronXcore/examples/windows/: all_intelligent.bat  curves_intelligent.bat  imgui.ini  triangles_intelligent.bat  tubes_intelligent.bat
neuronXcore/ext/glad/include/glad/: glad.h
neuronXcore/ext/glad/src/: glad.c
neuronXcore/materials/: metallic.txt  neuron2.txt  test.txt  tubes.txt
neuronXcore/rtn/: BasicNeurons.cpp  BasicNeurons.h  CMakeLists.txt  CameraMode.cpp  CameraMode.h  CameraTrack.cpp  CameraTrack.h  CmdlineParser.cpp  CmdlineParser.h  Curve.cpp  Curve.h  CurveUtils.h  OptixTubes.cpp  OptixTubes.h  Triangles.cpp  Triangles.h  Tubes.cpp  TubesUtils - 副本.cpp  TubesUtils.cpp  TubesUtils.h  Viewer.h  filesystem.h  material.cpp  material.h  neuronXcore.cpp  profiler.cpp  profiler.h  viewer.cpp
neuronXcore/rtn/device/: Camera.h  FrameState.h  PerRayData.h  RayGenData.h  TriangleMesh.h  TubesGeom.h  basicNeurons.cu  common - 副本.cu  common.cu  common.h  disney_bsdf.h  roundedCone.h
(+741 files in other folders)
